# graphiti

./: .commitlintrc.json  .dockerignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  conftest.py  pyproject.toml  release-please-config.json  renovate.json
.flox/: env.json
.github/: dependabot.yml
.github/workflows/: ai-moderator.yml  cla.yml  claude-code-review-manual.yml  claude-code-review.yml  claude.yml  codeql.yml  commitlint.yml  labeler.yml  lint.yml  release-graphiti-core.yml  release-mcp-server.yml  release-please.yml  release-server-container.yml  secret-scan.yml  stale.yml  trivy.yml  typecheck.yml  unit_tests.yml
examples/opentelemetry/: pyproject.toml
examples/podcast/: transcript_parser.py
examples/wizard_of_oz/: parser.py
graphiti_core/: __init__.py  graph_queries.py
graphiti_core/embedder/: __init__.py
graphiti_core/prompts/: __init__.py
graphiti_core/telemetry/: __init__.py  telemetry.py
graphiti_core/utils/: __init__.py
mcp_server/: main.py  pyproject.toml
mcp_server/docker/: Dockerfile  Dockerfile.standalone  build-standalone.sh  build-with-version.sh  github-actions-example.yml
mcp_server/src/: graphiti_mcp_server.py
mcp_server/tests/: conftest.py  run_tests.py  test_async_operations.py  test_comprehensive_integration.py  test_configuration.py  test_falkordb_integration.py  test_fixtures.py  test_http_integration.py  test_integration.py  test_mcp_integration.py  test_mcp_transports.py  test_stdio_simple.py  test_stress_load.py
server/: pyproject.toml
server/graph_service/: config.py  main.py  zep_graphiti.py
(+22 files in other folders)
